--- a/index.html
+++ b/index.html
@@ -28,3 +28,5 @@ navbar_title: Home
         title='<i class="fas fa-star"></i> Selected Publications'
     %}
 {% endif %}
+
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=WVt8R54bmVSDXAUqL3mwh7AcjjxrxK9rz5eti0oynxY&cl=ffffff&w=a"></script>
