--- a/index.html
+++ b/index.html
@@ -29,4 +29,15 @@ navbar_title: Home
     %}
 {% endif %}
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=WVt8R54bmVSDXAUqL3mwh7AcjjxrxK9rz5eti0oynxY&cl=ffffff&w=a"></script>
+<div id="clustrmaps-container">
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=WVt8R54bmVSDXAUqL3mwh7AcjjxrxK9rz5eti0oynxY&cl=ffffff&w=a"></script>
+</div>
+
+<style>
+  #clustrmaps-container {
+    width: 300px;  
+    height: 300px; 
+    margin: 0 auto; 
+  }
+</style>
+
